# rules_rust

./: BUILD  WORKSPACE  aspects.bzl
.bazelci/: presubmit.yml
docs/: BUILD  all.bzl  (+7 more)
examples/criterion_bench/: BUILD  Cargo.toml
examples/criterion_bench/benches/: fibonacci.rs
examples/criterion_bench/raze/: BUILD.bazel  crates.bzl
examples/criterion_bench/raze/remote/: BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bstr-0.2.14.bazel  BUILD.bumpalo-3.4.0.bazel  BUILD.byteorder-1.3.4.bazel  BUILD.cast-0.2.3.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.const_fn-0.4.4.bazel  BUILD.criterion-0.3.3.bazel  BUILD.criterion-plot-0.4.3.bazel  BUILD.crossbeam-channel-0.5.0.bazel  BUILD.crossbeam-deque-0.8.0.bazel  BUILD.crossbeam-epoch-0.9.1.bazel  BUILD.crossbeam-utils-0.8.1.bazel  BUILD.csv-1.1.5.bazel  BUILD.csv-core-0.1.10.bazel  BUILD.either-1.6.1.bazel  BUILD.half-1.6.0.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.itertools-0.9.0.bazel  BUILD.itoa-0.4.6.bazel  BUILD.js-sys-0.3.46.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.81.bazel  BUILD.log-0.4.11.bazel  BUILD.memchr-2.3.4.bazel  BUILD.memoffset-0.6.1.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.num_cpus-1.13.0.bazel  BUILD.oorandom-11.1.3.bazel  BUILD.plotters-0.2.15.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.quote-1.0.7.bazel  BUILD.rayon-1.5.0.bazel  BUILD.rayon-core-1.9.0.bazel  BUILD.regex-1.4.2.bazel  BUILD.regex-automata-0.1.9.bazel  (+27 more)
worker/: BUILD  Cargo.toml  README.md  bootstrap.bzl  main.rs  toolchain.bzl
(+26 files in other folders)
