[workspace]
# declare ourselves as a workspace so we don't break on Windows when the user
# workspace has a Cargo workspace

[package]
name = "rustc-worker"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustc-worker"
path = "main.rs"

[dependencies]
protobuf = { version = "=2.8.2", features = ["with-bytes"] }
